metadata/sdx_pull_1595286862675/unpackaged/objects/MBExpenseItem__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Item_Date__c</fullName>
        <label>Expense Item Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Item_Type__c</fullName>
        <label>Expense Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accomodation</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Subscriptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBExpense__c</fullName>
        <label>MBExpense</label>
        <referenceTo>MBExpense__c</referenceTo>
        <relationshipLabel>MBExpenseItems</relationshipLabel>
        <relationshipName>MBExpenseItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Personal_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Expense</label>
        <type>Checkbox</type>
    </fields>
    <label>MBExpenseItem</label>
    <nameField>
        <displayFormat>MBEI-{00000}</displayFormat>
        <label>MBExpenseItem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBExpenseItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>